<resources>
    <string name="app_name">CareFeed</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="btn_login_text">Login</string>
    <string name="text_register">Click here to register</string>
    <string name="registration_title">Register a new account</string>
    <string name="btn_register">Register</string>
    <string name="hint_username">Username</string>
    <string name="text_login"><u>Back to login</u></string>
    <string name="text_help">If you need help, please contact our customer service.</string>
    <string name="btn_confirm">Confirm</string>
    <string name="txt_forget_password">Forget Password?</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_change_image"><u>Change</u></string>
    <string name="password_pattern">(?=^.{8,}$)((?=.*\\d)|(?=.*\\W+))(?![.\\n])((?=.*[A-Z])|(?=.*[a-z])).*$</string>
    <string name="password_hint"><![CDATA[Use 8 or more characters with a mix of letters & numbers]]></string>
    <string name="hint_new_password">New Password</string>
    <string name="new_password_hint">Incorrect password.</string>
    <string name="hint_old_password">Old Password</string>
    <string name="txt_incorrect_password">Incorrect Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eventLayoutTitle">Title</string>
    <string name="eventDateTime">dateTime</string>
    <string name="eventDescription">description</string>
    <string name="eventJoinButtonText">Join</string>
    <string name="event_joined_counts">0</string>
    <string name="event_has_joined_this_event">has joined this event</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="your_friends">Your friends</string>
    <string name="you_are_not_alone">You are not alone~</string>
    <string name="enter_your_message_here">Enter your message here</string>
    <string name="write_description_about_the_post">Write description about the post…</string>
    <string name="create_profile">Create profile</string>
    <string name="age">Age</string>
    <string name="introduction">Introduction</string>
    <string name="or_login_with">or login with</string>
    <string name="receiver_message">receiver_message</string>
    <string name="sender_message">sender_message</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="please_enter_your_email_address">Please enter your email address.</string>
    <string name="comments">Comments</string>
    <string name="comment_Count">(0)</string>
    <string name="write_comment">Write comment...</string>
    <string name="end_of_posts">End of posts</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="user_introduction">User Introduction.</string>
    <string name="username">Username</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="title">Title</string>
    <string name="search">Search...</string>
    <string name="no_result_found">No result found</string>
    <string name="status">Status</string>
    <string name="datetime">dateTime</string>
    <string name="comment_will_be_placed_here">comment will be placed here</string>
    <string name="date_and_time">date and time</string>
    <string name="description">description</string>
    <string name="likeCounts">0</string>
    <string name="likes">likes</string>
</resources>
