<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_title"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email_address"
                android:id="@+id/register_email"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:id="@+id/register_password"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dim_gray"
            android:text="@string/password_hint"
            android:id="@+id/password_hint"
            android:textSize="15sp"
            android:layout_marginBottom="8dp"
            android:paddingLeft="6dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_confirm_password"
                android:id="@+id/register_confirm_password"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/password_does_not_match"
            android:id="@+id/password_match_hint"
            android:visibility="gone"
            android:textSize="15sp"
            android:layout_marginBottom="8dp"
            android:paddingLeft="6dp"
            android:paddingStart="6dp" />


        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:id="@+id/btn_register"
            android:background="@drawable/white_rounded_button"
            android:padding="12dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="8dp"
            />
    </LinearLayout>
    
    <ProgressBar
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/register_progress_bar"
        android:layout_centerInParent="true"
        />
</RelativeLayout>