<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/event_whole_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/view_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eventLayoutTitle"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/view_event_dateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eventDateTime"
            android:textSize="12sp"/>

        <TextView
            android:textIsSelectable="true"
            android:id="@+id/view_event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/eventDescription"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/view_event_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop" />

            <ProgressBar
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/event_layout_progress_bar"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/event_join_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/eventJoinButtonText"/>

            <TextView
                android:id="@+id/view_event_joined_counts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:text="@string/event_joined_counts"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_has_joined_this_event"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_below="@+id/event_whole_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#D3D3D3"/>

</RelativeLayout>