<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="100dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_recovery"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_email_address"
            android:textSize="18sp"
            android:textColor="@color/dim_gray"
            android:gravity="center_horizontal"
            android:layout_marginBottom="35dp"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email_address"
                android:id="@+id/recovery_email"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_confirm"
            android:id="@+id/btn_confirm"
            android:background="@drawable/white_rounded_button"
            android:padding="12dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="8dp"
            />
    </LinearLayout>

    <ProgressBar
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/recovery_progress_bar"
        android:layout_centerInParent="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_help"
        android:textSize="18sp"
        android:textColor="@color/dim_gray"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:padding="12dp"/>
</RelativeLayout>