<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="80dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/carefeed_logo"
            android:layout_marginBottom="30dp"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email_address"
                android:id="@+id/login_email"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:id="@+id/login_password"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_forget_password"
            android:textColor="@color/dim_gray"
            android:gravity="end"
            android:textSize="17sp"
            android:onClick="recovery_onClick"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login_text"
            android:id="@+id/btn_login"
            android:background="@drawable/white_rounded_button"
            android:padding="12dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:id="@+id/text_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/text_register"
            android:textColor="@color/dodger_blue"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:onClick="register_onClick"/>
    </LinearLayout>
    
    <ProgressBar
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/login_progress_bar"
        android:layout_centerInParent="true"/>
</RelativeLayout>