<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/comment_whole_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/view_comment_profile_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/profile"
                android:scaleType="centerCrop"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/view_comment_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/username"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginStart="5dp" />

                    <TextView
                        android:id="@+id/view_comment_dateTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/datetime"
                        android:textSize="14sp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp" />

                </LinearLayout>

                <TextView
                    android:textIsSelectable="true"
                    android:id="@+id/view_comment_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/comment_will_be_placed_here"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="5dp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>