<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/friend_linear">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_requests"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:id="@+id/friend_request_title"
            android:layout_marginStart="20dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:id="@+id/separate_line1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_friend_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_friends"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:id="@+id/friend_title"
        android:layout_below="@id/friend_linear"
        android:layout_marginStart="20dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/separate_line2"
        android:layout_below="@+id/friend_title"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/you_are_not_alone"
        android:textSize="16sp"
        android:id="@+id/txt_no_friend"
        android:layout_below="@+id/separate_line2"
        android:layout_marginTop="10dp"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_friend_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/friend_title">

    </android.support.v7.widget.RecyclerView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:src="@drawable/add_friend"
        app:backgroundTint="@color/white"
        app:borderWidth="0dp"
        app:fabCustomSize="48dp" />

    <ProgressBar
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:id="@+id/fragment_friend_progress_bar"/>
</RelativeLayout>